--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Object Detection</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Object Detection and Tracking</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Object Detection</h1>
-    <input type="file" id="file-input" accept="image/*">
-    <div id="canvas-container">
-        <canvas id="canvas"></canvas>
+    <div class="container">
+        <video id="video" width="640" height="480" autoplay></video>
+        <canvas id="canvas" width="640" height="480"></canvas>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
